Commit finished styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     </head>
     <body>
         <div class="container">
-            <div>
-                <h3>HOME</h3>
+            <div class="scoreboard-col">
+                <h3 class="team-header">HOME</h3>
+                <div class="score-wrapper">0</div>
+                <div class="button-wrapper">
+                    <button class="add-btn">+1</button>
+                    <button class="add-btn">+2</button>
+                    <button class="add-btn">+3</button>
+                </div>
             </div>
-            <div>
-                <h3>GUEST</h3>
+            <div class="scoreboard-col">
+                <h3 class="team-header">GUEST</h3>
+                <div class="score-wrapper">0</div>
+                <div class="button-wrapper">
+                    <button class="add-btn">+1</button>
+                    <button class="add-btn">+2</button>
+                    <button class="add-btn">+3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
